tests/cases/control-flow/ok/for-iterator-direct.ari
struct Cursor {
  current: i64,
}

impl iter::Iterator[i64] for Cursor {
  fn next(self) -> Option[i64] {
    Some(self.current)
  }
}

fn main() -> i64 {
  let cursor = Cursor { current: 37 };
  var total = 0;
  for value in cursor {
    total = value + 5;
    break;
  }
  return total;
}
