tests/cases/control-flow/errors/for-iterator-planned.ari
struct Cursor {
  current: i64,
}

fn main() -> i64 {
  let cursor = Cursor { current: 0 };
  for value in cursor {
    return value;
  }
  return 0;
}
